# scholar-translator

./: .dockerignore  .gitignore  Dockerfile  README.md  README_ko.md  docker-compose.yml  pyproject.toml
paper_translator/: __init__.py  backend.py  cache.py  cli.py  config.py  converter.py  doclayout.py  gui.py  high_level.py  mcp_server.py  translator.py
scholar_parser/: __init__.py  __main__.py  backend.py  cache.py  cli.py  converter.py  doclayout.py  gui.py  high_level.py  mcp_server.py  pdfinterp.py  translator.py
scholar_translator/: __init__.py  __main__.py  backend.py  cache.py  cli.py  converter.py  doclayout.py  gui.py  high_level.py  mcp_server.py  translator.py
skills/scholar-translator/: SKILL.md
test/: test_cache.py  test_converter.py  test_doclayout.py  test_translator.py
