[project]
name = "scholar-parser"
version = "1.9.11"
description = "Scientific Paper PDF Translator with Korean Focus"
authors = [{ name = "Byaidu", email = "byaidux@gmail.com" }]
license = "AGPL-3.0"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    # for arm64 linux whells
    "pymupdf<1.25.3",
    "tqdm",
    "tenacity",
    "numpy",
    # 5.36 has a bug, webui starts with a white screen
    "gradio<5.36",
    "huggingface_hub",
    "onnx",
    "onnxruntime",
    "opencv-python-headless",
    "pdfminer-six==20250416",
    "gradio_pdf>=0.0.21",
    "pikepdf",
    "peewee>=3.17.8",
    "fontTools",
    "babeldoc>=0.3.50",
    "rich",
    "boto3>=1.26.0",
]

[project.optional-dependencies]
backend = [
    "flask",
    "celery",
    "redis"
]
argostranslate = [
    "argostranslate"
]
mcp = [
    "mcp>=1.6.0",
]

[dependency-groups]
dev = [
    "black",
    "flake8",
    "pre-commit",
    "pytest",
    "build",
    "bumpver>=2024.1130",
]

[project.urls]
Homepage = "https://github.com/Byaidu/PDFMathTranslate"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
scholar-parser = "scholar_parser.cli:main"

[tool.flake8]
ignore = ["E203", "E261", "E501", "W503", "E741"]
max-line-length = 88



[bumpver]
current_version = "1.9.11"
version_pattern = "MAJOR.MINOR.PATCH[.PYTAGNUM]"

[bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"scholar_parser/__init__.py" = [
    '__version__ = "{version}"'
]
